rtpg (0.2.1-1) experimental; urgency=low

  * index.cgi to ensure compatibility with old rtpg(0.1) config.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 28 May 2010 16:34:43 +0400

rtpg (0.2.0-1) experimental; urgency=low

  * New upstream version:
    - new frame interface;
    - slow ajax was removed.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 28 May 2010 15:32:51 +0400

rtpg (0.1.7-1) unstable; urgency=low

  * Fixed a few apache warnings.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 15 Jan 2010 18:00:26 +0300

rtpg (0.1.6-1) unstable; urgency=low

  * New upstream version, now it can work with the last version of
    XML::RPC::Parser.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 13 Nov 2009 21:09:04 +0300

rtpg (0.1.5-1) unstable; urgency=low

  * New upstream version: fix perl-library for rtorrent 0.8.5.
  * Standards-Version bumped to 3.8.3.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 19 Aug 2009 09:08:32 +0400

rtpg (0.1.4-1) unstable; urgency=low

  * New upstream version (Now RTPG supports working on ports
    different 80 or 443).
  * Fixed a few lintian warnings.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 01 Jul 2009 14:54:22 +0400

rtpg (0.1.3-1) unstable; urgency=low

  * Fixed progressbars (it was set incorrectly in the first refresh).
  * Bumped Standards-Version to 3.8.1.
  * Added Japanese translation, thanks Hideki Yamane (Debian-JP)
    <henrich@debian.or.jp>, closes: #520064.

 -- Dmitry E. Oboukhov <unera@debian.org>  Mon, 04 May 2009 22:46:01 +0400

rtpg (0.1.2-1) unstable; urgency=low

  * Added ability to switch many priorities of torrent at once.
  * a few optimisations for better work with many torrents.

 -- Dmitry E. Oboukhov <unera@debian.org>  Thu, 05 Mar 2009 13:46:20 +0300

rtpg (0.1.1-1) unstable; urgency=low

  * I've made a few optimisations for better work of the rtpg with
    many torrents.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 04 Mar 2009 22:33:58 +0300
